--- a/languages/rdf-ttl.tmLanguage.json
+++ b/languages/rdf-ttl.tmLanguage.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://raw.githubusercontent.com/martinring/tmlanguage/master/tmlanguage.json",
-    "name": "RDF (N-Triples)",
-    "scopeName": "source.rdf-nt",
+    "name": "RDF (Turtle)",
+    "scopeName": "source.rdf-ttl",
     "patterns": [
         {
             "include": "#comments"
@@ -14,6 +14,12 @@
         },
         {
             "include": "#strings"
+        },
+        {
+            "include": "#numerics"
+        },
+        {
+            "include": "#langtag"
         },
         {
             "include": "#keywords"
@@ -49,20 +55,46 @@
             ]
         },
         "strings": {
-            "begin": "\"",
-            "end": "\"",
             "patterns": [
                 {
-                    "name": "constant.character.escape.xowl",
-                    "match": "\\\\."
+                    "name": "string.quoted.double",
+                    "match": "\"([^\\\"]|\\\\|\\\")*\""
+                },
+                {
+                    "name": "string.quoted.single",
+                    "match": "'([^\\']|\\\\|\\')*'"
+                },
+                {
+                    "name": "string.quoted.double",
+                    "match": "\"\"\"([^\\\"]|\\\\|\\\")*\"\"\""
+                },
+                {
+                    "name": "string.quoted.single",
+                    "match": "'''([^\\']|\\\\|\\')*'''"
+                }
+            ]
+        },
+        "numerics": {
+            "patterns": [
+                {
+                    "name": "constant.numeric",
+                    "match": "(\\+|\\-)?[0-9]+"
+                },
+                {
+                    "name": "constant.numeric",
+                    "match": "(\\+|\\-)?[0-9]*\\.[0-9]+"
+                },
+                {
+                    "name": "constant.numeric",
+                    "match": "(\\+|\\-)?([0-9]+\\.[0-9]*[eE](\\+|\\-)?[0-9]+|\\.[0-9]+[eE](\\+|\\-)?[0-9]+|[0-9]+[eE](\\+|\\-)?[0-9]+)"
                 }
             ]
         },
         "keywords": {
             "patterns": [
                 {
-                    "name":"keyword.control",
-                    "match": "\\b([Pp][Rr][Ee][Ff][Ii][Xx]|[Bb][Aa])\\b"
+                    "name": "keyword.control",
+                    "match": "\\b(?i:@?prefix|@?base|a|true|false)\\b"
                 }
             ]
         }
