--- a/languages/xrdf.tmLanguage.json
+++ b/languages/xrdf.tmLanguage.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://raw.githubusercontent.com/martinring/tmlanguage/master/tmlanguage.json",
-    "name": "RDF (TriG)",
-    "scopeName": "source.rdf-trig",
+    "name": "xRDF",
+    "scopeName": "source.xrdf",
     "patterns": [
         {
             "include": "#comments"
@@ -23,6 +23,9 @@
         },
         {
             "include": "#keywords"
+        },
+        {
+            "include": "#identifiers"
         }
     ],
     "repository": {
@@ -95,6 +98,18 @@
                 {
                     "name": "keyword.control",
                     "match": "\\b(?i:@?prefix|@?base|graph|a|true|false)\\b"
+                },
+                {
+                    "name": "keyword.control",
+                    "match": "\\b(?i:rule|meta|not|distinct|with)\\b"
+                }
+            ]
+        },
+        "identifiers": {
+            "patterns": [
+                {
+                    "name":"variable.name",
+                    "match": "\\?[_a-zA-Z][_a-zA-Z0-9]*"
                 }
             ]
         }
